Update Environmental Protection

--- a/9346B-G4/9346B-G4-3/contact.html
+++ b/9346B-G4/9346B-G4-3/contact.html
@@ -13,6 +13,9 @@
 		<li><a href="contact.html">Contact Us</a></li>
 		<li><a href="reference.html">Reference</a></li>
 
+		<footer>
+				<p>&copy; 2018 Group4WebTechLab</p>
+		</footer>
 
 	</body>
 
