--- a/9346B-G4/9346B-G4-3/index.html
+++ b/9346B-G4/9346B-G4-3/index.html
@@ -12,8 +12,10 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="contact.html">Contact Us</a></li>
 		<li><a href="reference.html">Reference</a></li>
-	
-
+		
+		<footer>
+				<p>&copy; 2018 Group4WebTechLab</p>
+		</footer>
 
 	</body>
 
