added Events and Discussion Link

--- a/9346B-G4/9346B-G4-2/index.html
+++ b/9346B-G4/9346B-G4-2/index.html
@@ -7,6 +7,8 @@
 	<body id="body">
 		<section id="links">
 			<a href="index.html" id="index">Home</a>
+			<a href="event.html" id="event">Events</a>
+			<a href="discussion.html" id="discussion">Discussions</a>
 			<a href="agenda.html" id="agenda">Agenda</a>
 			<a href="about.html" id="about">About us</a>
 		</section>
