added meta charset and edited doctype html

--- a/9346B-G4/9346B-G4-2/index.html
+++ b/9346B-G4/9346B-G4-2/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
-	<header id="header">Inclusion
-	<title id="title">Inclusion</title>
-	<link rel="stylesheet" type="text/css" href="StyleSheet1/mainDesign.css">
-	</header>
+	<head>
+		<header id="header">Inclusion
+			<title id="title">Inclusion</title>
+			<link rel="stylesheet" type="text/css" href="StyleSheet1/mainDesign.css">
+		</header>
+		<meta charset = "UTF-8" />
+	</head>
 	<body id="body">
 		<section id="links">
 			<a href="index.html" id="index">Home</a>
