--- a/9346B-G4/9346B-G4-3/about.html
+++ b/9346B-G4/9346B-G4-3/about.html
@@ -3,14 +3,14 @@
 
 	<head>
 
-		<title>Contact Us</title>
+		<title>About Us</title>
 
 	</head>
-
+	
 	<body>
-
+	
 		<li><a href="index.html">Home</a></li>
-		<li><a href="contact.html">Contact Us</a></li>
+		<li><a href="about.html">About</a></li>
 		<li><a href="reference.html">Reference</a></li>
 
 		<footer>
