--- a/9346B-G4/9346B-G4-3/index.html
+++ b/9346B-G4/9346B-G4-3/index.html
@@ -8,9 +8,12 @@
 	</head>
 
 	<body>
+		<header>
+				<p>Go Green</p>
+		</header>
 
 		<li><a href="index.html">Home</a></li>
-		<li><a href="contact.html">Contact Us</a></li>
+		<li><a href="about.html">About</a></li>
 		<li><a href="reference.html">Reference</a></li>
 		
 		<footer>
