Updated the contentent of environmental protection

--- a/9346B-G4/9346B-G4-3/index.html
+++ b/9346B-G4/9346B-G4-3/index.html
@@ -9,13 +9,15 @@
 
 	<body>
 		<header>
-				<p>Go Green</p>
+				<h1>Go Green</h1>
 		</header>
 
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="reference.html">Reference</a></li>
-		
+		<nav>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="reference.html">Reference</a></li>
+		</nav>
+
 		<footer>
 				<p>&copy; 2018 Group4WebTechLab</p>
 		</footer>
