--- a/9346B-G4/9346B-G4-3/reference.html
+++ b/9346B-G4/9346B-G4-3/reference.html
@@ -9,12 +9,24 @@
 
 	<body>
 		
-		
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="reference.html">Reference</a></li>
+		<nav>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="reference.html">Reference</a></li>
+		</nav>
 
+		<h1>References</h1>
 
+		<section>
+			
+
+		</section>
+
+		<section>
+			
+
+		</section>
+					
 		<footer>
 				<p>&copy; 2018 Group4WebTechLab</p>
 		</footer>
