--- a/9346B-G4/9346B-G4-3/about.html
+++ b/9346B-G4/9346B-G4-3/about.html
@@ -8,10 +8,24 @@
 	</head>
 	
 	<body>
-	
-		<li><a href="index.html">Home</a></li>
-		<li><a href="about.html">About</a></li>
-		<li><a href="reference.html">Reference</a></li>
+		
+		<nav>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About</a></li>
+			<li><a href="reference.html">Reference</a></li>
+		</nav>
+
+		<div class = "container">
+			
+			<div class="box">
+			
+				<h1>About Us</h1>
+
+				<p>We are an IT student from Saint Louis University</p>
+
+			</div>
+
+		</div>
 
 		<footer>
 				<p>&copy; 2018 Group4WebTechLab</p>
