added content in html

--- a/9346B-G4/9346B-G4-2/index.html
+++ b/9346B-G4/9346B-G4-2/index.html
@@ -1,24 +1,49 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<header id="header">Inclusion
-			<title id="title">Inclusion</title>
+		<title id="title">Inclusion</title>
 			<link rel="stylesheet" type="text/css" href="StyleSheet1/mainDesign.css">
-		</header>
 		<meta charset = "UTF-8" />
 	</head>
 	<body id="body">
-		<section id="links">
-			<a href="index.html" id="index">Home</a>
-			<a href="event.html" id="event">Events</a>
-			<a href="discussion.html" id="discussion">Discussions</a>
-			<a href="agenda.html" id="agenda">Agenda</a>
-			<a href="about.html" id="about">About us</a>
-		</section>
+		<nav id="links">
+				<a href="index.html" id="index">Home</a>
+				<a href="advocacy.html" id="advocacy">Advocacy</a>
+				<a href="about.html" id="about">About us</a>
+			</nav>
 
-		<p id="bodyWord">hello world</p>
-		<footer id="foot">
-			<p id="foot">Foot</p>
+		<article>
+			<h1>Brief History of the barangay</h1>
+
+			<div id="history">
+			<p>One such R&R station is John Hay Air Station, commonly called Camp John Hay.
+It was established in October 1903 under the executive order of President Theodore Roosevelt.
+The place is named under his Secretary of State John Milton Hay.
+Over the course of its history, it has been bombed by the Japanese during World War 2, recaptured by the Americans, and later converted into a tourist spot.
+Camp John Hay is a special economic zone—a Tourism Economic Zone to be more specific. Visitors must subject themselves to a search by the zone’s guards</p>
+			</div>
+			<div id="inclusion">
+				<h1>Inclusion</h1>
+				<p>
+					Persons with Disabilities(PWD) are peaople who at most are'nt enjoying their lives that much because of their disability. Some only stays home  and others stays at hospitals.
+Are they going to spend so much time doing nothing? What if,just what if we organize some events that they can attend even just a small scale events for them.
+And for those who can go anywhere despite having difficulties, you or your family can visit places such as Camp John Hay, Baguio City for recreational activities, having time with your families and friends, dining together,
+many more activites that a person can do even having such disability.
+				</p>
+			</div>
+		
+			<div id="question">
+				<h1>So what is inclusion in our term?</h1>
+				<p>
+					It is the act of including somebody or someone with "out of the normal" in activities.
+				</p>
+			</div>
+		</article>
+
+
+		<footer>
+			<p id="foot">&copy;Webtech Lab 2018 Group 4</p>
 		</footer>
+
 	</body>
 </html>
