added definitions and others

--- a/9346B-G4/9346B-G4-2/index.html
+++ b/9346B-G4/9346B-G4-2/index.html
@@ -29,13 +29,15 @@ Camp John Hay is a special economic zone—a Tourism Economic Zone to be more sp
 Are they going to spend so much time doing nothing? What if,just what if we organize some events that they can attend even just a small scale events for them.
 And for those who can go anywhere despite having difficulties, you or your family can visit places such as Camp John Hay, Baguio City for recreational activities, having time with your families and friends, dining together,
 many more activites that a person can do even having such disability.
-				</p>
+					this place supports those people with disabilities(PWDs) or thier senior citizens. They have places for them and thir families to bond and have fun even with those  disability.
+			<site>	Advocacy is key to challenge barriers to inclusion and improve policy, environmental and attitudinal factors so people with disabilities are fully supported, enabled,
+					included and empowered to participate fully on an equal basis in society. <site></p>
 			</div>
 		
 			<div id="question">
 				<h1>So what is inclusion in our term?</h1>
 				<p>
-					It is the act of including somebody or someone with "out of the normal" in activities.
+					It is the act of including somebody or someone with "out of the ordinary" in activities.
 				</p>
 			</div>
 		</article>
