--- a/9346B-G4/9346B-G4-2/index.html
+++ b/9346B-G4/9346B-G4-2/index.html
@@ -19,25 +19,36 @@
 			<p>One such R&R station is John Hay Air Station, commonly called Camp John Hay.
 It was established in October 1903 under the executive order of President Theodore Roosevelt.
 The place is named under his Secretary of State John Milton Hay.
-Over the course of its history, it has been bombed by the Japanese during World War 2, recaptured by the Americans, and later converted into a tourist spot.
-Camp John Hay is a special economic zone—a Tourism Economic Zone to be more specific. Visitors must subject themselves to a search by the zone’s guards.
+Over the course of its history, it has been bombed by the Japanese during World War 2,
+recaptured by the Americans, and later converted into a tourist spot.
+Camp John Hay is a special economic zone—a Tourism Economic Zone to be more specific. 
+Visitors must subject themselves to a search by the zone’s guards.
 Camp John Hay is a good place for families out there, they have large number of restaurants to choose from, from techno hub 
 to the manor you can visit as many as 15 restaurants at the vicinity, having a eco friendly picnic area, your family
-can enjoy many things you want like playing balls, badminton and such.after dining or having a salo salo with your family, you can also the fresh air from the area. 
-they also have the what they call eco trail were you can enjoy walking with your family surrounder by trees and plants. And for adventurous kids and adults,
-they also have the tree top adventure where you can also treck and try there activities. but do it with much caution. for adults who much as want just taking pictures,
+can enjoy many things you want like playing balls, badminton and such.
+after dining or having a salo salo with your family, you can also the fresh air from the area. 
+they also have the what they call eco trail were you can enjoy walking with your family surrounder by trees and plants.
+And for adventurous kids and adults, they also have the tree top adventure where you can also treck and try there activities.
+but do it with much caution. for adults who much as want just taking pictures,
 they have places where you can enjoy picture taking with your families.
 				</p>
 			</div>
 			<div id="inclusion">
 				<h1>Inclusion</h1>
 				<p>
------> sa advocacy dapat to.dagdagan ko pa bukas, isip lng ako		Persons with Disabilities(PWD) are peaople who at most are'nt enjoying their lives that much because of their disability. Some only stays home  and others stays at hospitals.
-Are they going to spend so much time doing nothing? What if,just what if we organize some events that they can attend even just a small scale events for them.
-And for those who can go anywhere despite having difficulties, you or your family can visit places such as Camp John Hay, Baguio City for recreational activities, having time with your families and friends, dining together,
-many more activites that a person can do even having such disability.	this place supports those people with disabilities(PWDs) or thier senior citizens. They have places for them and thir families to bond and have fun even with those  disability.
-		<site>	Advocacy is key to challenge barriers to inclusion and improve policy, environmental and attitudinal factors so people with disabilities are fully supported, enabled,
-					included and empowered to participate fully on an equal basis in society. <site></p>
+-----> sa advocacy dapat to.dagdagan ko pa bukas, isip lng ako		
+Persons with Disabilities(PWD) are peaople who at most are'nt enjoying their lives that much because of their disability.
+Some only stays home  and others stays at hospitals. Are they going to spend so much time doing nothing? What if,
+just what if we organize some events that they can attend even just a small scale events for them.
+And for those who can go anywhere despite having difficulties,
+you or your family can visit places such as Camp John Hay, Baguio City for recreational activities, 
+having time with your families and friends, dining together,
+many more activites that a person can do even having such disability.
+this place supports those people with disabilities(PWDs) or thier senior citizens.
+They have places for them and thir families to bond and have fun even with those  disability.
+		<cite>	Advocacy is key to challenge barriers to inclusion and improve policy, 
+				environmental and attitudinal factors so people with disabilities are fully supported, enabled,
+					included and empowered to participate fully on an equal basis in society. <cite></p>
 			</div>
 		
 			<div id="question">
