--- a/9346B-G4/9346B-G4-2/index.html
+++ b/9346B-G4/9346B-G4-2/index.html
@@ -52,10 +52,20 @@ They have places for them and thir families to bond and have fun even with those
 			</div>
 		
 			<div id="question">
-				<h1>So what is inclusion in our term?</h1>
-				<p>
-					It is the act of including somebody or someone with "out of the ordinary" in activities.
-				</p>
+<h1>So what is inclusion?</h1>
+	<p>
+	Inclusion is the state of being denied by equality. Equality by means that they are not
+that accpected by society by thier looks, apprerance and disabilities. Having such Inequalities,
+they have thier own talents that even normal person can't have. There's this person who
+inspires people with disablities in a huge way. His name is Nick Vujicic who with such disability having
+now a beautiful life full of happiness. Nick Says that <blockqoute> God can use a life without limbs
+to show the world how to live a life without limits! </blockqoute>. So don't let your self steem put you down,
+you just need to say to all the peaple of the world the God also created you as they are, that God treats us qually and uses us in Good deeds.
+Nick also says <blockqoute> for every disability you have, you are blessed with more than enough abilities to overcome your challenges. </blockqoute>
+What about your disablity if as much as you want you can do the things you love the most? Is having that disability can't let you do things that you want?
+Maybe this thing you want isn't suited for you? Maybe their's something out there that is for you but you're just afraid to try things out?
+Know more about Nick Vujicic, just visit thier website here at: <cite> https://www.lifewithoutlimbs.org/ </cite>
+	</p>
 			</div>
 		</article>
 
