Added other html files

--- a/9346B-G4/9346B-G4-3/about.html
+++ b/9346B-G4/9346B-G4-3/about.html
@@ -4,25 +4,50 @@
 	<head>
 
 		<title>About Us</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="styles/general.css">
 
 	</head>
 	
 	<body>
 		
-		<nav>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="reference.html">Reference</a></li>
+		<header>
+
+			<h1>Camp John Hay</h1>
+		
+		</header>
+
+		<nav id="navigation">
+			<h3>
+				<a href="home.html">Home</a>
+				<a href="projects.html">Projects</a>
+				<a href="images.html">Images</a>
+				<a href="about.html">About</a>
+				<a href="reference.html">Reference</a>
+			</h3>
 		</nav>
 
 		<div class = "container">
 			
 			<div class="box">
 			
-				<h1>About Us</h1>
+				<h2>About Us</h2>
 
 				<p>We are an IT student from Saint Louis University</p>
 
+			</div>
+
+			<div class="box" >
+				
+				<h2>Members :</h2>
+				<div class="indent">
+					<p>03 Ayon-ayon, Christian Jaymar L.</p>
+					<p>13 Lopez, Christian H.</p>
+					<p>17 Patricio, Jan Ronald M.</p>
+					<p>20 Sam, Paul Christian C.</p>
+					<p>22 Viloria, Brendon Bruce J.</p>
+					<p>24 Almayda, Audry Jane L.</p>
+				</div>
 			</div>
 
 		</div>
