--- a/9346B-G4/9346B-G4-3/index.html
+++ b/9346B-G4/9346B-G4-3/index.html
@@ -3,22 +3,37 @@
 
 	<head>
 
-		<title>Home</title>
-			
+		<title>Index</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="styles/general.css">
+
 	</head>
 
 	<body>
+
 		<header>
-				<h1>Go Green</h1>
+				<h1>Camp John Hay</h1>
 		</header>
 
-		<nav>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="reference.html">Reference</a></li>
+		<div id="center-container">
+			<div id="center-qoute">
+				<blockquote>
+					<p>
+						&rdquo;The environment and the economy are really both
+  						two sides of the same coin. If we cannot sustain the environment,
+ 						we cannot sustain ourselves.&rdquo;<
+					</p>
+					<a href="https://www.goodreads.com/author/show/117297.Wangari_Maathai">-Wangari Maathai</a>
+				</blockquote>
+			</div>
+		</div>
+
+		<nav id="center-button">
+			<a href="home.html"><h3>Explore</h3></a>
 		</nav>
 
-		<footer>
+		
+		<footer id="center-footer">
 				<p>&copy; 2018 Group4WebTechLab</p>
 		</footer>
 
