--- a/9346B-G4/9346B-G4-3/reference.html
+++ b/9346B-G4/9346B-G4-3/reference.html
@@ -4,19 +4,34 @@
 	<head>
 
 		<title>Reference</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="styles/general.css">
 
 	</head>
 
 	<body>
 		
-		<nav>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="about.html">About</a></li>
-			<li><a href="reference.html">Reference</a></li>
+		<header>
+
+			<h1>Camp John Hay</h1>
+		
+		</header>
+
+		<nav id="navigation">
+			<h3>
+				<a href="home.html">Home</a>
+				<a href="projects.html">Projects</a>
+				<a href="images.html">Images</a>
+				<a href="about.html">About</a>
+				<a href="reference.html">Reference</a>
+			</h3>
 		</nav>
 
-		<h1>References</h1>
-
+		<div class="container">
+			
+			<h2>References</h2>
+		
+		</div>	
 		<section>
 			
 
@@ -28,7 +43,9 @@
 		</section>
 					
 		<footer>
+
 				<p>&copy; 2018 Group4WebTechLab</p>
+
 		</footer>
 
 	</body>
