--- a/9346B-G4/9346B-G4-3/images.html
+++ b/9346B-G4/9346B-G4-3/images.html
@@ -22,6 +22,7 @@
 			<h3>
 				<a href="home.html">Home</a>
 				<a href="projects.html">Projects</a>
+				<a href="images.html">Images</a>
 				<a href="about.html">About</a>
 				<a href="reference.html">Reference</a>
 			</h3>
