--- a/9346B-G4/9346B-G4-3/index.html
+++ b/9346B-G4/9346B-G4-3/index.html
@@ -12,7 +12,7 @@
 	<body>
 
 		<header>
-				<h1>Camp John Hay</h1>
+				<h1>Environmental Protection</h1>
 		</header>
 
 		<div id="center-container">
