--- a/9346B-G4/9346B-G4-3/home.html
+++ b/9346B-G4/9346B-G4-3/home.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-
 <html>
 
 	<head>
-	
+
 		<title>Home</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="styles/general.css">
@@ -13,35 +12,31 @@
 	<body>
 
 		<header>
-
-			<h1>Camp John Hay</h1>
-		
+				<h1>Green Side</h1>
 		</header>
 
-		<nav id="navigation">
-			<h3>
-				<a href="home.html">Home</a>
-				<a href="projects.html">Projects</a>
-				<a href="images.html">Images</a>
-				<a href="about.html">About</a>
-				<a href="reference.html">Reference</a>
-			</h3>
-		</nav>
-
-		<div class="container">
-			
-			<section>
-				
-
-
-			</section>
-
+		<div id="center-container">
+			<div id="center-qoute">
+				<blockquote>
+					<p>
+						&rdquo;The environment and the economy are really both
+  						two sides of the same coin. If we cannot sustain the environment,
+ 						we cannot sustain ourselves.&rdquo;
+						<br>
+						-Wangari Maathai
+						
+					</p>
+				</blockquote>
+			</div>
 		</div>
 
-		<footer>
+		<nav id="center-button">
+			<a href="about.html"><h3>Explore</h3></a>
+		</nav>
 
+		
+		<footer id="center-footer">
 				<p>&copy; 2018 Group4WebTechLab</p>
-
 		</footer>
 
 	</body>
