--- a/9346B-G4/9346B-G4-3/about.html
+++ b/9346B-G4/9346B-G4-3/about.html
@@ -3,7 +3,7 @@
 
 	<head>
 
-		<title>About Us</title>
+		<title>About</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="styles/general.css">
 
@@ -13,17 +13,18 @@
 		
 		<header>
 
-			<h1>Camp John Hay</h1>
+			<h1>Green Side</h1>
 		
 		</header>
 
 		<nav id="navigation">
 			<h3>
 				<a href="home.html">Home</a>
-				<a href="projects.html">Projects</a>
-				<a href="images.html">Images</a>
 				<a href="about.html">About</a>
-				<a href="reference.html">Reference</a>
+				<a href="projects.html">Projects</a>
+				<a href="images.html">Gallery</a>
+				<a href="images.html">Contact</a>
+				
 			</h3>
 		</nav>
 
@@ -33,20 +34,29 @@
 			
 				<h2>About Us</h2>
 
-				<p>We are an IT student from Saint Louis University</p>
+				<p>Camp John Hay is the most popular tourist spot in the City of Pines. It is known for having its wide open area
+					and green landscape making it a great place for relaxation and recreation. Here, people can do activities such as 
+					rapelling, picnic, shopping, trailing, and horseback riding. They can also have the tree-top adventure, and golfers can
+					go and play at the golf course. On the other side of Camp John Hay being a tourist attraction, the problem it faces 
+					regarding the environment cannot be denied. 
+					<br>
+					Within the past decades until now, environmental problems continue to arise causing natural disasters, health problems, and other 
+					forms of destruction. Environment is a part of us, and we, Green Side, intends to educate people and raise awareness about
+					protecting the environment of Camp John Hay.</p>
 
 			</div>
 
 			<div class="box" >
 				
-				<h2>Members :</h2>
+				<h2>Our Team</h2>
 				<div class="indent">
-					<p>03 Ayon-ayon, Christian Jaymar L.</p>
-					<p>13 Lopez, Christian H.</p>
-					<p>17 Patricio, Jan Ronald M.</p>
-					<p>20 Sam, Paul Christian C.</p>
-					<p>22 Viloria, Brendon Bruce J.</p>
-					<p>24 Almayda, Audry Jane L.</p>
+					<h3>School of Computer and Information Sciences (SCIS)</h3>
+					<p>Ayon-ayon, Christian Jaymar L.</p>
+					<p>Lopez, Christian H.</p>
+					<p>Patricio, Jan Ronald M.</p>
+					<p>Sam, Paul Christian C.</p>
+					<p>Viloria, Brendon Bruce J.</p>
+					<p>Almayda, Audry Jane L.</p>
 				</div>
 			</div>
 
