--- a/9346B-G4/9346B-G4-3/projects.html
+++ b/9346B-G4/9346B-G4-3/projects.html
@@ -24,7 +24,7 @@
 				<a href="projects.html">Projects</a>
 				<a href="images.html">Images</a>
 				<a href="about.html">About</a>
-				<a href="contact.html">contact</a>
+				<a href="contact.html">Contact</a>
 			</h3>
 		</nav>
 
