--- a/9346B-G4/9346B-G4-3/projects.html
+++ b/9346B-G4/9346B-G4-3/projects.html
@@ -21,9 +21,9 @@
 		<nav id="navigation">
 			<h3>
 				<a href="home.html">Home</a>
-				<a href="projects.html">Projects</a>
-				<a href="images.html">Images</a>
 				<a href="about.html">About</a>
+				<a href="projects.html">Projects</a>
+				<a href="gallery.html">Gallery</a>
 				<a href="contact.html">Contact</a>
 			</h3>
 		</nav>
