--- a/9346B-G4/9346B-G4-3/projects.html
+++ b/9346B-G4/9346B-G4-3/projects.html
@@ -33,12 +33,12 @@
 				of Camp John Hay.</p>
 
 			<div class="seed">
-					<img src="seedling.jpg" alt="trees" width="450" height="300">
+					<img src="images/seedling.jpg" alt="trees" width="450" height="300">
 					<a href="seedling.html"><h4>Seedling</h4></a>
 			</div>
 				
 			<div class="bin">
-					<img src="binit.jpg" alt="bin" width="450" height="300">
+					<img src="images/binit.jpg" alt="bin" width="450" height="300">
 					<a href="binit.html"><h4>Bin It</h4></a>
 			</div>
 		</div>
