--- a/9346B-G4/9346B-G4-3/home.html
+++ b/9346B-G4/9346B-G4-3/home.html
@@ -19,7 +19,7 @@
 			<div id="center-qoute">
 				<blockquote>
 					<p>
-						&rdquo;The environment and the economy are really both
+						&ldquo;The environment and the economy are really both
   						two sides of the same coin. If we cannot sustain the environment,
  						we cannot sustain ourselves.&rdquo;
 						<br>
@@ -29,11 +29,12 @@
 				</blockquote>
 			</div>
 		</div>
-
-		<nav id="center-button">
-			<a href="about.html"><h3>Explore</h3></a>
-		</nav>
-
+		
+		<div id="button-container">
+			<nav id="center-button">
+				<a href="about.html"><h3>Explore</h3></a>
+			</nav>
+		</div>
 		
 		<footer id="center-footer">
 				<p>&copy; 2018 Group4WebTechLab</p>
