--- a/9346B-G4/9346B-G4-3/about.html
+++ b/9346B-G4/9346B-G4-3/about.html
@@ -22,8 +22,8 @@
 				<a href="home.html">Home</a>
 				<a href="about.html">About</a>
 				<a href="projects.html">Projects</a>
-				<a href="images.html">Gallery</a>
-				<a href="images.html">Contact</a>
+				<a href="gallery.html">Gallery</a>
+				<a href="contact.html">Contact</a>
 				
 			</h3>
 		</nav>
