--- a/9346B-G4/9346B-G4-2/index.html
+++ b/9346B-G4/9346B-G4-2/index.html
@@ -1,78 +1,62 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<title id="title">Inclusion</title>
 			<link rel="stylesheet" type="text/css" href="StyleSheet1/mainDesign.css">
-		<meta charset = "UTF-8" />
+			<meta charset = "UTF-8" />
 	</head>
-	<body id="body">
-		<nav id="links">
-				<a href="index.html" id="index">Home</a>
-				<a href="advocacy.html" id="advocacy">Advocacy</a>
-				<a href="about.html" id="about">About us</a>
-			</nav>
-
-		<article>
-			<h1>Brief History of the barangay</h1>
-
-			<div id="history">
-			<p>One such R&R station is John Hay Air Station, commonly called Camp John Hay.
-It was established in October 1903 under the executive order of President Theodore Roosevelt.
-The place is named under his Secretary of State John Milton Hay.
-Over the course of its history, it has been bombed by the Japanese during World War 2,
-recaptured by the Americans, and later converted into a tourist spot.
-Camp John Hay is a special economic zone—a Tourism Economic Zone to be more specific. 
-Visitors must subject themselves to a search by the zone’s guards.
-Camp John Hay is a good place for families out there, they have large number of restaurants to choose from, from techno hub 
-to the manor you can visit as many as 15 restaurants at the vicinity, having a eco friendly picnic area, your family
-can enjoy many things you want like playing balls, badminton and such.
-after dining or having a salo salo with your family, you can also the fresh air from the area. 
-they also have the what they call eco trail were you can enjoy walking with your family surrounder by trees and plants.
-And for adventurous kids and adults, they also have the tree top adventure where you can also treck and try there activities.
-but do it with much caution. for adults who much as want just taking pictures,
-they have places where you can enjoy picture taking with your families.
-				</p>
-			</div>
-			<div id="inclusion">
-				<h1>Inclusion</h1>
-				<p>
------> sa advocacy dapat to.dagdagan ko pa bukas, isip lng ako		
-Persons with Disabilities(PWD) are peaople who at most are'nt enjoying their lives that much because of their disability.
-Some only stays home  and others stays at hospitals. Are they going to spend so much time doing nothing? What if,
-just what if we organize some events that they can attend even just a small scale events for them.
-And for those who can go anywhere despite having difficulties,
-you or your family can visit places such as Camp John Hay, Baguio City for recreational activities, 
-having time with your families and friends, dining together,
-many more activites that a person can do even having such disability.
-this place supports those people with disabilities(PWDs) or thier senior citizens.
-They have places for them and thir families to bond and have fun even with those  disability.
-		<cite>	Advocacy is key to challenge barriers to inclusion and improve policy, 
-				environmental and attitudinal factors so people with disabilities are fully supported, enabled,
-					included and empowered to participate fully on an equal basis in society. <cite></p>
-			</div>
+	<body>
 		
-			<div id="question">
-<h1>So what is inclusion?</h1>
-	<p>
-	Inclusion is the state of being denied by equality. Equality by means that they are not
-that accpected by society by thier looks, apprerance and disabilities. Having such Inequalities,
-they have thier own talents that even normal person can't have. There's this person who
-inspires people with disablities in a huge way. His name is Nick Vujicic who with such disability having
-now a beautiful life full of happiness. Nick Says that <blockqoute> God can use a life without limbs
-to show the world how to live a life without limits! </blockqoute>. So don't let your self steem put you down,
-you just need to say to all the peaple of the world the God also created you as they are, that God treats us qually and uses us in Good deeds.
-Nick also says <blockqoute> for every disability you have, you are blessed with more than enough abilities to overcome your challenges. </blockqoute>
-What about your disablity if as much as you want you can do the things you love the most? Is having that disability can't let you do things that you want?
-Maybe this thing you want isn't suited for you? Maybe their's something out there that is for you but you're just afraid to try things out?
-Know more about Nick Vujicic, just visit thier website here at: <cite> https://www.lifewithoutlimbs.org/ </cite>
-	</p>
-			</div>
-		</article>
+		<header>
+		<img src="pic/ban.png" id="ban" alt="alt-ban">
+				<nav id="link" class="links">
+					<ul class="nav-head">
+						<li class="head-link">
+							<a href="index.html" id="index" class="nav-link">Home</a>
+						</li>
+						<li>
+							<a href="advocacy.html" id="advocacy" class="nav-link">Advocacy</a>
+						</li>
+						<li>
+							<a href="about.html" id="about" class="nav-link">About us</a>
+						</li>
+					</ul>
+				</nav>	
+		</header>
+		<nav class="bgContainer">
+			<h1 id="barangay">Brief History of the barangay</h1>
+				<section>
+					<h3 id="cjh">Camp John Hay</h3>
+						<img src="pic/theCamp.jpg" alt="theCamp" id="JCamp">
+						<p id="cjh-word">One such R&R station is John Hay Air Station, commonly called Camp John Hay.
+						It was established in October 1903 under the executive order of President Theodore Roosevelt.
+						The place is named under his Secretary of State John Milton Hay.
+						Over the course of its history, it has been bombed by the Japanese during World War 2,
+						recaptured by the Americans, and later converted into a tourist spot.
+						Camp John Hay is a special economic zone—a Tourism Economic Zone to be more specific.
+						Visitors must subject themselves to a search by the zone’s guards.</p>
+    					<img src="pic/zone.jpg" alt="guards" id="zone-guard">
+				</section>
+				<section id="place">
+					<h2 id="place-cjh">Places you can visit at Camp John Hay</h2>
+    					<img src="pic/stalls.jpg" alt="stall" id="cjh-stall">
+						<p id="place-word">Camp John Hay is a good place for families out there, they have large number 
+						of restaurants to choose from, from techno hub 
+						to the manor you can visit as many as 15 restaurants at the vicinity, also having a eco-friendly picnic area, your family can enjoy eating you packed lunch at the area, you 
+						can enjoy many things you want like playing balls, badminton and such.
+						after dining or having a salo salo with your family, you can also the fresh air from the area. 
+						they also have the what they call eco trail were you can enjoy walking with your family surrounder by trees and plants.
+						And for adventurous kids and adults, they also have the tree top adventure where you can also treck and try there activities.
+						but do it with much caution. for adults who much as want just taking pictures,
+						they have places where you can enjoy picture taking with your families.
+						And for those families who enjoy's buying clothes and others they have the Mile-Hi center where you can find many stalls to go with.
+						</p>
+	
+				</section>
 
-
-		<footer>
-			<p id="foot">&copy;Webtech Lab 2018 Group 4</p>
-		</footer>
-
-	</body>
+			<footer class="container">
+    			<p class="copyright">&copy;Webtech Lab 2018 Group 4</p>
+			</footer>
+		</nav>
+	</body>	
 </html>
