--- a/9346B-G4/9346B-G4-2/index.html
+++ b/9346B-G4/9346B-G4-2/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<title id="title">Inclusion</title>
-			<link rel="stylesheet" type="text/css" href="StyleSheet1/mainDesign.css">
+			<!--<link rel="stylesheet" type="text/css" href="StyleSheet1/mainDesign.css">-->
+			<link rel="stylesheet" type="text/css" href="altStyles/altStyles.css">
 			<meta charset = "UTF-8" />
 	</head>
 	<body>
